--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "laravel-echo": "^1.11.3",
     "postcss": "^7.0.39",
+    "pusher-js": "^7.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
