--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "craco-less": "^1.20.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
