--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
