--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beforeunload": "^2.5.2",
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.6",
