--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beforeunload": "^2.5.2",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.6",
@@ -56,7 +57,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "gulp": "^4.0.2",
+    "gulp-csso": "^4.0.1",
+    "gulp-debug": "^4.0.0",
+    "gulp-less": "^5.0.0",
+    "gulp-postcss": "^9.0.1",
     "laravel-echo": "^1.11.3",
+    "less-plugin-npm-import": "^2.1.0",
     "postcss": "^7.0.39",
     "pusher-js": "^7.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
