--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.3.6",
     "@craco/craco": "^6.4.3",
     "@popperjs/core": "^2.11.2",
     "@reduxjs/toolkit": "^1.7.1",
@@ -26,6 +27,7 @@
     "react-router": "5.2.1",
     "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.9",
     "redux-devtools-extension": "^2.13.9",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
