add clear filters on table

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
- "short_name": "App",
- "name": "App",
+ "short_name": "DSWD - PMS",
+ "name": "DSWD - PMS",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
