--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ REACT_APP_PUSHER_APP_KEY_DEVEOPMENT=
 REACT_APP_PUSHER_APP_SECRET=
 REACT_APP_PUSHER_APP_CLUSTER=
 
+REACT_APP_ICT_SUPPORT=
+
 PUBLIC_URL=/procurement
