--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,12 @@ REACT_APP_PUSHER_APP_CLUSTER=
 
 REACT_APP_ICT_SUPPORT=
 
+REACT_APP_FIREBASE_API_KEY=
+REACT_APP_FIREBASE_AUTH_DOMAIN=
+REACT_APP_FIREBASE_PROJECT_ID=
+REACT_APP_FIREBASE_STORAGE_BUCKET=
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
+REACT_APP_FIREBASE_APP_ID=
+REACT_APP_FIREBASE_MEASUREMENT_ID=
+
 PUBLIC_URL=/procurement
