--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "craco-less": "^1.20.0",
     "dayjs": "^1.11.2",
     "dotenv": "^10.0.0",
+    "firebase": "^9.9.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "^17.0.2",
